# farmer-ai-human-feedback-system

./: .gitignore  README.md  app.py  eda_service.py  pyproject.toml
docs/: PROD-FarmerAI-EVAL-v0.5.md  PROD-FarmerAI-MW-FSA-CHAT-EN.md
frontend/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  Insights.tsx  env.d.ts  styles.css
